# AgenticAI-Folder

./: financial_research.ipynb  hr.json  hr.yaml  vehicle.ipynb
Labs/Lab1/vehicle_maintenance_agent/: README.md  cleanup.sh  setup.sh
Labs/Lab1/vehicle_maintenance_agent/agents/: agent.yaml  vehicle_telematics.yaml
Labs/Lab1/vehicle_maintenance_agent/knowledge_bases/: knowledge.yaml
Labs/Lab1/vehicle_maintenance_agent/tools/: get_nearest_service_center.py  get_vehicle_telematics.py
Labs/Lab2/Pre-authorisation_cashless_hosptalisation 2/agents/: claim_analyst_agent.yaml  claim_intake_validation_agent.yaml  claim_process_support_agent.yaml  claim_report_agent.yaml  claim_support_desk_agent.yaml  service_now_agent.yaml
Labs/Lab2/Pre-authorisation_cashless_hosptalisation 2/backups/: calculate_preauth_amount.py  claim_adjudication_agent.yaml  medibuddy_claim_process.yaml  policy_support_agent.yaml  users_insurance_policy.yaml
Labs/Lab2/Pre-authorisation_cashless_hosptalisation 2/scripts/: import-agents.sh  import-tools.sh
Labs/Lab2/external-agent-source-code/: CHANGES.rst  README.md  ai_service.py  config.toml  pyproject.toml
Labs/Lab2/external-agent-source-code/examples/: _interactive_chat.py  execute_ai_service_locally.py  query_existing_deployment.py
Labs/Lab2/external-agent-source-code/scripts/: deploy.py
Labs/Lab2/external-agent-source-code/src/risk_assessment_agent/: __init__.py  agent.py  tools.py
Labs/Lab2/external-agent-source-code/tests/: test_tools.py
Labs/Lab2/financial_research_and_analysis_agent 2/: cleanup.sh  setup.sh
(+34 files in other folders)
